Updates APIs Based on Kubernetes API Conventions (#143)
* Updates APIs Based on Kubernetes API Conventions

Signed-off-by: Daneyon Hansen <daneyon.hansen@solo.io>

* Reverts targetPort to targetPortNumber

Signed-off-by: Daneyon Hansen <daneyon.hansen@solo.io>

---------

Signed-off-by: Daneyon Hansen <daneyon.hansen@solo.io>

--- a/config/samples/gateway_v1alpha1_inferencepool.yaml
+++ b/config/samples/gateway_v1alpha1_inferencepool.yaml
@@ -6,6 +6,6 @@ metadata:
     app.kubernetes.io/managed-by: kustomize
   name: inferencepool-sample
 spec:
-  serviceRefs:
-  - gemini-jetstream-tpu-v5e-service
-  - gemini-vllm-a100-service
+  selector:
+    app: npc-bot
+  targetPortNumber: 8000
