--- a/config/crd/bases/inference.networking.x-k8s.io_inferencemodels.yaml
+++ b/config/crd/bases/inference.networking.x-k8s.io_inferencemodels.yaml
@@ -55,25 +55,32 @@ spec:
               condition, one will be selected at random.
             properties:
               criticality:
-                default: Default
-                description: Criticality defines how important it is to serve the
-                  model compared to other models referencing the same pool.
+                description: |-
+                  Criticality defines how important it is to serve the model compared to other models referencing the same pool.
+                  Criticality impacts how traffic is handled in resource constrained situations. It handles this by
+                  queuing or rejecting requests of lower criticality. InferenceModels of an equivalent Criticality will
+                  fairly share resources over throughput of tokens. In the future, the metric used to calculate fairness,
+                  and the proportionality of fairness will be configurable.
+
+                  Default values for this field will not be set, to allow for future additions of new field that may 'one of' with this field.
+                  Any implementations that may consume this field may treat an unset value as the 'Standard' range.
                 enum:
                 - Critical
-                - Default
+                - Standard
                 - Sheddable
                 type: string
               modelName:
                 description: |-
-                  ModelName is the name of the model as the users set in the "model" parameter in the requests.
-                  The name should be unique among the workloads that reference the same backend pool.
-                  This is the parameter that will be used to match the request with. In the future, we may
-                  allow to match on other request parameters. The other approach to support matching
-                  on other request parameters is to use a different ModelName per HTTPFilter.
-                  Names can be reserved without implementing an actual model in the pool.
+                  ModelName is the name of the model as it will be set in the "model" parameter for an incoming request.
+                  ModelNames must be unique for a referencing InferencePool
+                  (names can be reused for a different pool in the same cluster).
+                  The modelName with the oldest creation timestamp is retained, and the incoming
+                  InferenceModel is sets the Ready status to false with a corresponding reason.
+                  In the rare case of a race condition, one Model will be selected randomly to be considered valid, and the other rejected.
+                  Names can be reserved without an underlying model configured in the pool.
                   This can be done by specifying a target model and setting the weight to zero,
                   an error will be returned specifying that no valid target model is found.
-                maxLength: 253
+                maxLength: 256
                 type: string
               poolRef:
                 description: PoolRef is a reference to the inference pool, the pool
@@ -121,7 +128,6 @@ spec:
                       maxLength: 253
                       type: string
                     weight:
-                      default: 1
                       description: |-
                         Weight is used to determine the proportion of traffic that should be
                         sent to this model when multiple target models are specified.
@@ -133,10 +139,8 @@ spec:
                         implementation supports. Weight is not a percentage and the sum of
                         weights does not need to equal 100.
 
-                        If only one model is specified and it has a weight greater than 0, 100%
-                        of the traffic is forwarded to that model. If weight is set to 0, no
-                        traffic should be forwarded for this model. If unspecified, weight
-                        defaults to 1.
+                        If a weight is set for any targetModel, it must be set for all targetModels.
+                        Conversely weights are optional, so long as ALL targetModels do not specify a weight.
                       format: int32
                       maximum: 1000000
                       minimum: 0
@@ -146,6 +150,9 @@ spec:
                   type: object
                 maxItems: 10
                 type: array
+                x-kubernetes-validations:
+                - message: Weights should be set for all models, or none of the models.
+                  rule: self.all(model, has(model.weight)) || self.all(model, !has(model.weight))
             required:
             - modelName
             - poolRef
