--- a/pkg/manifests/ext_proc.yaml
+++ b/pkg/manifests/ext_proc.yaml
@@ -49,6 +49,8 @@ spec:
   targetPortNumber: 8000
   selector:
     app: vllm-llama2-7b-pool
+  extensionRef:
+    name: inference-gateway-ext-proc
 ---
 apiVersion: apps/v1
 kind: Deployment
