Lora syncer docs (#320)
* Integrate dynamic-lora-sidecar into main guide and add makefile, cloudbuild to build and publish lora-syncer image

Signed-off-by: Kunjan <kunjanp@google.com>

* Add makefile and cloudbuild file to build and push lora-syncer

Signed-off-by: Kunjan <kunjanp@google.com>

* Add makefile and cloudbuild file to build and push lora-syncer

Signed-off-by: Kunjan <kunjanp@google.com>

* Update site-src/guides/dynamic-lora.md

Co-authored-by: Abdullah Gharaibeh <40361897+ahg-g@users.noreply.github.com>

* Update site-src/guides/dynamic-lora.md

Co-authored-by: Abdullah Gharaibeh <40361897+ahg-g@users.noreply.github.com>

* Add makefile and cloudbuild file to build and push lora-syncer

Signed-off-by: Kunjan <kunjanp@google.com>

* Adds image-load and kind-load Make targets (#288)

Signed-off-by: Daneyon Hansen <daneyon.hansen@solo.io>

* Add makefile and cloudbuild file to build and push lora-syncer

Signed-off-by: Kunjan <kunjanp@google.com>

* Add build targets for lora syncer

Signed-off-by: Kunjan <kunjanp@google.com>

* Apply suggestions from code review

* Apply suggestions from code review

* Apply suggestions from code review

* Apply suggestions from code review

---------

Signed-off-by: Kunjan <kunjanp@google.com>
Signed-off-by: Daneyon Hansen <daneyon.hansen@solo.io>
Co-authored-by: Abdullah Gharaibeh <40361897+ahg-g@users.noreply.github.com>
Co-authored-by: Daneyon Hansen <daneyon.hansen@solo.io>

--- a/pkg/manifests/vllm/deployment-with-syncer.yaml
+++ b/pkg/manifests/vllm/deployment-with-syncer.yaml
@@ -53,6 +53,8 @@ spec:
                 secretKeyRef:
                   name: hf-token
                   key: token
+            - name: VLLM_ALLOW_RUNTIME_LORA_UPDATING
+              value: "true"
           ports:
             - containerPort: 8000
               name: http
@@ -89,6 +91,19 @@ spec:
               name: shm
             - name: adapters
               mountPath: "/adapters"
+      initContainers:
+        - name: lora-adapter-syncer
+          tty: true
+          stdin: true 
+          image: us-central1-docker.pkg.dev/ahg-gke-dev/jobset2/lora-syncer:6dc97be
+          restartPolicy: Always
+          imagePullPolicy: Always
+          env: 
+            - name: DYNAMIC_LORA_ROLLOUT_CONFIG
+              value: "/config/configmap.yaml"
+          volumeMounts: # DO NOT USE subPath
+          - name: config-volume
+            mountPath:  /config
       restartPolicy: Always
       schedulerName: default-scheduler
       terminationGracePeriodSeconds: 30
@@ -100,3 +115,31 @@ spec:
             medium: Memory
         - name: adapters
           emptyDir: {}
+        - name: config-volume
+          configMap:
+            name: dynamic-lora-config
+
+---
+
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: dynamic-lora-config
+data:
+  configmap.yaml: |
+      vLLMLoRAConfig:
+        name: sql-loras-llama
+        port: 8000
+        ensureExist:
+          models:
+          - base-model: meta-llama/Llama-2-7b-hf
+            id: tweet-summary-0
+            source: vineetsharma/qlora-adapter-Llama-2-7b-hf-TweetSumm
+          - base-model: meta-llama/Llama-2-7b-hf
+            id: tweet-summary-1
+            source: vineetsharma/qlora-adapter-Llama-2-7b-hf-TweetSumm
+        ensureNotExist:
+          models:
+          - base-model: meta-llama/Llama-2-7b-hf
+            id: tweet-summary-2
+            source: vineetsharma/qlora-adapter-Llama-2-7b-hf-TweetSumm
