Support full duplex streaming (#450)
This PR supports the FULL_DUPLEX_STREAMED mode for ext-proc.

--- a/config/manifests/ext_proc.yaml
+++ b/config/manifests/ext_proc.yaml
@@ -77,11 +77,14 @@ spec:
         - -poolName
         - "my-pool"
         - -v
-        - "3"
+        - "4"
         - -grpcPort
         - "9002"
         - -grpcHealthPort
         - "9003"
+        env:
+        - name: USE_STREAMING
+          value: "false"
         ports:
         - containerPort: 9002
         - containerPort: 9003
