--- a/test/testdata/envoy.yaml
+++ b/test/testdata/envoy.yaml
@@ -100,7 +100,7 @@ data:
                           grpc_service:
                             envoy_grpc:
                               cluster_name: ext_proc
-                              authority: inference-gateway-ext-proc.default:9002
+                              authority: vllm-llama2-7b-epp.default:9002
                             timeout: 10s
                           processing_mode:
                             request_header_mode: SEND
@@ -194,7 +194,7 @@ data:
                   - endpoint:
                       address:
                         socket_address:
-                          address: inference-gateway-ext-proc.default
+                          address: vllm-llama2-7b-epp.default
                           port_value: 9002
                     health_status: HEALTHY
                     load_balancing_weight: 1
