Add instructions to run benchmarks (#480)
* Add instructions to run benchmarks

* Address comments

* Move benchmark guide to site-src and other cleanups

* Add source code link for the benchmark tool image

* Address nit

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -62,6 +62,8 @@ nav:
       - Adapter Rollout: guides/adapter-rollout.md
       - Metrics: guides/metrics.md
     - Implementer's Guide: guides/implementers.md
+  - Performance:
+    - Benchmark: performance/benchmark/index.md
   - Reference:
     - API Reference: reference/spec.md
     - API Types:
