adjust the gpu deployment to increase max batch size (#642)
* adjust the gpu deployment to increase max batch size

* Apply suggestions from code review

--- a/config/manifests/vllm/gpu-deployment.yaml
+++ b/config/manifests/vllm/gpu-deployment.yaml
@@ -24,9 +24,15 @@ spec:
           - "1"
           - "--port"
           - "8000"
+          - "--max-num-seq"
+          - "1024"
+          - "--compilation-config"
+          - "3"
           - "--enable-lora"
           - "--max-loras"
           - "2"
+          - "--max-lora-rank"
+          - "8"
           - "--max-cpu-loras"
           - "12"
           env:
