docs: roll out guide (#829)
* added rollout guide

Signed-off-by: Xiyue Yu <xiyue@google.com>

* changed format

* changed format

* fixed comments and added more examples

* seperate files

* fixed comment

* fixed format

* fixed format

---------

Signed-off-by: Xiyue Yu <xiyue@google.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -61,9 +61,10 @@ nav:
   - Guides:
     - User Guides:
       - Getting started: guides/index.md
-      - Adapter Rollout: guides/adapter-rollout.md
+      - Rollout:
+          - Adapter Rollout: guides/adapter-rollout.md
+          - InferencePool Rollout: guides/inferencepool-rollout.md
       - Metrics: guides/metrics.md
-      - Replacing an Inference Pool: guides/replacing-inference-pool.md
     - Implementer's Guide: guides/implementers.md
   - Performance:
     - Benchmark: performance/benchmark/index.md
