--- a/conformance/tests/basic/inferencepool_resolvedrefs_condition.yaml
+++ b/conformance/tests/basic/inferencepool_resolvedrefs_condition.yaml
@@ -61,9 +61,78 @@ spec:
   - name: http
     port: 3000
     targetPort: 3000
-  - name: epp
-    port: 9002
-    targetPort: 9002
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: infra-backend-epp
+  namespace: gateway-conformance-app-backend
+spec:
+  selector:
+    app: infra-backend-epp
+  ports:
+    - protocol: TCP
+      port: 9002
+      targetPort: 9002
+      appProtocol: http2
+  type: ClusterIP
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: infra-backend-epp
+  namespace: gateway-conformance-app-backend
+  labels:
+    app: infra-backend-epp
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: infra-backend-epp
+  template:
+    metadata:
+      labels:
+        app: infra-backend-epp
+    spec:
+      # Conservatively, this timeout should mirror the longest grace period of the pods within the pool
+      terminationGracePeriodSeconds: 130
+      containers:
+      - name: epp
+        image: us-central1-docker.pkg.dev/k8s-staging-images/gateway-api-inference-extension/epp:main
+        imagePullPolicy: Always
+        args:
+        - -poolName
+        - "multi-gateway-pool"
+        - -poolNamespace
+        - "gateway-conformance-app-backend"
+        - -v
+        - "4"
+        - --zap-encoder
+        - "json"
+        - -grpcPort
+        - "9002"
+        - -grpcHealthPort
+        - "9003"
+        env:
+        - name: USE_STREAMING
+          value: "true"
+        ports:
+        - containerPort: 9002
+        - containerPort: 9003
+        - name: metrics
+          containerPort: 9090
+        livenessProbe:
+          grpc:
+            port: 9003
+            service: inference-extension
+          initialDelaySeconds: 5
+          periodSeconds: 10
+        readinessProbe:
+          grpc:
+            port: 9003
+            service: inference-extension
+          initialDelaySeconds: 5
+          periodSeconds: 10
 ---
 # --- InferencePool Definition ---
 apiVersion: inference.networking.x-k8s.io/v1alpha2
@@ -76,7 +145,7 @@ spec:
     app: "infra-backend"
   targetPortNumber: 3000
   extensionRef:
-    name: infra-backend-svc
+    name: infra-backend-epp
 ---
 # --- HTTPRoute for Primary Gateway (conformance-gateway) ---
 apiVersion: gateway.networking.k8s.io/v1
