--- a/conformance/tests/basic/inferencepool_accepted.yaml
+++ b/conformance/tests/basic/inferencepool_accepted.yaml
@@ -3,43 +3,6 @@
 # InferencePool and HTTPRoute resources, which the InferencePoolAccepted
 # test will use to verify that the controller recognizes and accepts the resource.
 
-# --- Minimal Backend Deployment (using agnhost echo server) ---
-# This Deployment provides Pods for the InferencePool to select.
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: infra-backend-v1-deployment
-  namespace: gateway-conformance-app-backend
-  labels:
-    app: infra-backend-v1
-spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: infra-backend-v1
-  template:
-    metadata:
-      labels:
-        app: infra-backend-v1
-    spec:
-      containers:
-      - name: agnhost-echo
-        image: k8s.gcr.io/e2e-test-images/agnhost:2.39
-        args:
-        - serve-hostname
-        - --http-port=8080
-        ports:
-        - name: http
-          containerPort: 8080
-        readinessProbe:
-          httpGet:
-            path: /
-            port: 8080
-          initialDelaySeconds: 3
-          periodSeconds: 5
-          failureThreshold: 2
-
----
 # --- InferencePool Definition ---
 apiVersion: inference.networking.x-k8s.io/v1alpha2
 kind: InferencePool
@@ -53,7 +16,7 @@ spec:
   # --- Selector (Required) ---
   # Selects the Pods belonging to this pool.
   selector:
-    app: "infra-backend-v1"
+    app: "app-backend-primary-model-server"
 
   # --- Target Port (Required) ---
   # The port the model server container (agnhost in this case) listens on.
@@ -64,8 +27,83 @@ spec:
   extensionRef:
     # group: "" # Optional
     # kind: Service # Optional
-    name: infra-backend-v1-epp
-
+    name: app-endpoint-picker-svc
+---
+# --- Conformance EPP service Definition ---
+apiVersion: v1
+kind: Service
+metadata:
+  name: app-endpoint-picker-svc
+  namespace: gateway-conformance-app-backend
+spec:
+  selector:
+    app: app-backend-epp
+  ports:
+    - protocol: TCP
+      port: 9002
+      targetPort: 9002
+      appProtocol: http2
+  type: ClusterIP
+---
+# --- Conformance EPP Deployment ---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: app-endpoint-picker
+  namespace: gateway-conformance-app-backend
+  labels:
+    app: app-backend-epp
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: app-backend-epp
+  template:
+    metadata:
+      labels:
+        app: app-backend-epp
+    spec:
+      # Conservatively, this timeout should mirror the longest grace period of the pods within the pool
+      terminationGracePeriodSeconds: 130
+      containers:
+      - name: epp
+        image: us-central1-docker.pkg.dev/k8s-staging-images/gateway-api-inference-extension/epp:main
+        imagePullPolicy: Always
+        args:
+        - -poolName
+        - "inferencepool-basic-accepted"
+        - -poolNamespace
+        - "gateway-conformance-app-backend"
+        - -v
+        - "4"
+        - --zap-encoder
+        - "json"
+        - -grpcPort
+        - "9002"
+        - -grpcHealthPort
+        - "9003"
+        env:
+        - name: USE_STREAMING
+          value: "true"
+        - name: ENABLE_REQ_HEADER_BASED_SCHEDULER_FOR_TESTING # Used for conformance test.
+          value: "true"
+        ports:
+        - containerPort: 9002
+        - containerPort: 9003
+        - name: metrics
+          containerPort: 9090
+        livenessProbe:
+          grpc:
+            port: 9003
+            service: inference-extension
+          initialDelaySeconds: 5
+          periodSeconds: 10
+        readinessProbe:
+          grpc:
+            port: 9003
+            service: inference-extension
+          initialDelaySeconds: 5
+          periodSeconds: 10
 ---
 # --- HTTPRoute Definition ---
 apiVersion: gateway.networking.k8s.io/v1
