--- a/conformance/tests/basic/gateway_following_epp_routing.yaml
+++ b/conformance/tests/basic/gateway_following_epp_routing.yaml
@@ -48,7 +48,7 @@ spec:
             fieldRef:
               fieldPath: status.podIP
 ---
-# --- Backend Service ---
+# --- InferenceModel Definition ---
 # Service for the infra-backend-deployment.
 apiVersion: inference.networking.x-k8s.io/v1alpha2
 kind: InferenceModel
