--- a/conformance/tests/basic/inferencepool_accepted.yaml
+++ b/conformance/tests/basic/inferencepool_accepted.yaml
@@ -1,8 +1,3 @@
-# Basic InferencePool for acceptance testing.
-# This manifest defines the minimal required fields to create valid
-# InferencePool and HTTPRoute resources, which the InferencePoolAccepted
-# test will use to verify that the controller recognizes and accepts the resource.
-
 # --- HTTPRoute Definition ---
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
@@ -13,7 +8,7 @@ spec:
   parentRefs:
   - group: gateway.networking.k8s.io
     kind: Gateway
-    name: conformance-gateway # Name of the shared Gateway from maniffests.yaml
+    name: conformance-primary-gateway # Name of the shared Gateway from maniffests.yaml
     namespace: gateway-conformance-infra  # Namespace of the shared Gateway
     sectionName: http
   rules:
@@ -22,7 +17,6 @@ spec:
       kind: InferencePool
       name: primary-inference-pool # Name of the InferencePool this route points to
       # namespace: gateway-conformance-app-backend - is omitted since it is in the same namespace as HTTPRoute
-      port: 8080 # Matching the InferencePool's targetPortNumber
     matches:
     - path:
         type: PathPrefix
