--- a/config/crd/bases/inference.networking.x-k8s.io_inferencemodels.yaml
+++ b/config/crd/bases/inference.networking.x-k8s.io_inferencemodels.yaml
@@ -2,7 +2,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    inference.networking.k8s.io/bundle-version: v0.4.0-dev
+    inference.networking.k8s.io/bundle-version: v0.1.0-rc.2
   creationTimestamp: null
   name: inferencemodels.inference.networking.x-k8s.io
 spec:
