--- a/config/crd/bases/inference.networking.x-k8s.io_inferencepools.yaml
+++ b/config/crd/bases/inference.networking.x-k8s.io_inferencepools.yaml
@@ -2,7 +2,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    inference.networking.k8s.io/bundle-version: v0.5.0-rc.2
+    inference.networking.k8s.io/bundle-version: v1.0.0-dev
   creationTimestamp: null
   name: inferencepools.inference.networking.x-k8s.io
 spec:
