Support scraping metrics from target running with TLS (#1190)
* Support scraping metrics from target running with TLS

vLLM server can run with TLS and metrics scraping doesn't
work currently in that case.

Signed-off-by: Pierangelo Di Pilato <pierdipi@redhat.com>

* Add '--model-server-metrics-*' flags to Helm values and EPP template

Signed-off-by: Pierangelo Di Pilato <pierdipi@redhat.com>

* Update config/charts/inferencepool/values.yaml

Co-authored-by: Abdullah Gharaibeh <40361897+ahg-g@users.noreply.github.com>

* Update cmd/epp/runner/runner.go

Co-authored-by: Abdullah Gharaibeh <40361897+ahg-g@users.noreply.github.com>

---------

Signed-off-by: Pierangelo Di Pilato <pierdipi@redhat.com>
Co-authored-by: Kellen Swain <kfswain@google.com>
Co-authored-by: Abdullah Gharaibeh <40361897+ahg-g@users.noreply.github.com>

--- a/config/charts/inferencepool/values.yaml
+++ b/config/charts/inferencepool/values.yaml
@@ -8,6 +8,9 @@ inferenceExtension:
   extProcPort: 9002
   env: []
   enablePprof: true # Enable pprof handlers for profiling and debugging
+  modelServerMetricsPath: "/metrics"
+  modelServerMetricsScheme: "http"
+  modelServerMetricsHttpsInsecureSkipVerify: true
   # This is the plugins configuration file. 
   pluginsConfigFile: "default-plugins.yaml"
   # pluginsCustomConfig:
