--- a/config/manifests/vllm/sim-deployment.yaml
+++ b/config/manifests/vllm/sim-deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: vllm-sim
-        image: ghcr.io/llm-d/llm-d-inference-sim:v0.1.2
+        image: ghcr.io/llm-d/llm-d-inference-sim:v0.3.0
         imagePullPolicy: Always
         args:
         - --model
@@ -23,8 +23,8 @@ spec:
         - "8000"
         - --max-loras
         - "2"
-        - --lora
-        - food-review-1
+        - --lora-modules
+        - '{"name": "food-review-1"}'
         env:
         - name: POD_NAME
           valueFrom:
