fix: change the inferenceobjective to use v1 inferencepool (#1338)
* change  the example to use v1 inferencepool

* updated regression test

--- a/config/manifests/inferenceobjective.yaml
+++ b/config/manifests/inferenceobjective.yaml
@@ -5,6 +5,7 @@ metadata:
 spec:
   criticality: 1
   poolRef:
+    group: inference.networking.k8s.io
     name: vllm-llama3-8b-instruct
 ---
 apiVersion: inference.networking.x-k8s.io/v1alpha2
@@ -14,6 +15,7 @@ metadata:
 spec:
   criticality: 2
   poolRef:
+    group: inference.networking.k8s.io
     name: vllm-llama3-8b-instruct
 ---
 apiVersion: inference.networking.x-k8s.io/v1alpha2
@@ -23,4 +25,5 @@ metadata:
 spec:
   criticality: 2
   poolRef:
+    group: inference.networking.k8s.io
     name: vllm-llama3-8b-instruct
