--- a/config/manifests/regression-testing/inferenceobjective.yaml
+++ b/config/manifests/regression-testing/inferenceobjective.yaml
@@ -5,6 +5,7 @@ metadata:
 spec:
   criticality: 2
   poolRef:
+    group: inference.networking.k8s.io
     name: vllm-llama3-8b-instruct
 
 ---
@@ -16,6 +17,7 @@ metadata:
 spec:
   criticality: 2
   poolRef:
+    group: inference.networking.k8s.io
     name: vllm-llama3-8b-instruct
 
 ---
@@ -27,6 +29,7 @@ metadata:
 spec:
   criticality: 2
   poolRef:
+    group: inference.networking.k8s.io
     name: vllm-llama3-8b-instruct
 
 ---
@@ -38,6 +41,7 @@ metadata:
 spec:
   criticality: 2
   poolRef:
+    group: inference.networking.k8s.io
     name: vllm-llama3-8b-instruct
 
 ---
@@ -49,6 +53,7 @@ metadata:
 spec:
   criticality: 2
   poolRef:
+    group: inference.networking.k8s.io
     name: vllm-llama3-8b-instruct
 
 ---
@@ -60,6 +65,7 @@ metadata:
 spec:
   criticality: 2
   poolRef:
+    group: inference.networking.k8s.io
     name: vllm-llama3-8b-instruct
 
 ---
@@ -71,6 +77,7 @@ metadata:
 spec:
   criticality: 2
   poolRef:
+    group: inference.networking.k8s.io
     name: vllm-llama3-8b-instruct
 
 ---
@@ -82,6 +89,7 @@ metadata:
 spec:
   criticality: 2
   poolRef:
+    group: inference.networking.k8s.io
     name: vllm-llama3-8b-instruct
 
 ---
@@ -93,6 +101,7 @@ metadata:
 spec:
   criticality: 2
   poolRef:
+    group: inference.networking.k8s.io
     name: vllm-llama3-8b-instruct
 
 ---
@@ -104,6 +113,7 @@ metadata:
 spec:
   criticality: 2
   poolRef:
+    group: inference.networking.k8s.io
     name: vllm-llama3-8b-instruct
 
 ---
@@ -115,6 +125,7 @@ metadata:
 spec:
   criticality: 2
   poolRef:
+    group: inference.networking.k8s.io
     name: vllm-llama3-8b-instruct
 
 ---
@@ -126,6 +137,7 @@ metadata:
 spec:
   criticality: 2
   poolRef:
+    group: inference.networking.k8s.io
     name: vllm-llama3-8b-instruct
 
 ---
@@ -137,6 +149,7 @@ metadata:
 spec:
   criticality: 2
   poolRef:
+    group: inference.networking.k8s.io
     name: vllm-llama3-8b-instruct
 
 
@@ -149,6 +162,7 @@ metadata:
 spec:
   criticality: 2
   poolRef:
+    group: inference.networking.k8s.io
     name: vllm-llama3-8b-instruct
 
 
@@ -161,6 +175,7 @@ metadata:
 spec:
   criticality: 2
   poolRef:
+    group: inference.networking.k8s.io
     name: vllm-llama3-8b-instruct
 
 ---
@@ -173,4 +188,5 @@ metadata:
 spec:
   criticality: 2
   poolRef:
+    group: inference.networking.k8s.io
     name: vllm-llama3-8b-instruct
