Affiliate ready state with leader election with a flag ha-enable-leader-election (#1337)
* feat: Affiliate ready state with leader election

* Fix manifest file for e2e test with leader election after rebase

* Update cmd/epp/runner/health.go

* Add Helm configuration for leader election

* Update config/charts/inferencepool/templates/leader-election-rbac.yaml

* docs: Add leader election section in helm chart README

---------

Co-authored-by: Kellen Swain <kfswain@google.com>

--- a/config/charts/inferencepool/values.yaml
+++ b/config/charts/inferencepool/values.yaml
@@ -34,6 +34,9 @@ inferenceExtension:
   extraContainerPorts: []
   # Define additional service ports
   extraServicePorts: []
+  # Enable leader election for high availability. When enabled, it is recommended to set replicas > 1.
+  # Only the leader pod will be ready to serve traffic.
+  enableLeaderElection: false
 
 inferencePool:
   targetPortNumber: 8000
